====================================================================================
ERSKY9x changelog
Please insert a short description of a change by inserting it below this header and 
above the previous change.

Format is as follows:
******************************************
CHANGELOG: 25-APR-2011
description here
====================================================================================

******************************************
CHANGELOG: 31-Aug-2012  MPB
voice_numeric - add thousands and 2 decimals - needs new/changed voice files
Correct startup timing for Optrex LCD
Bluetooth baudrate settings(Linvor)
WSHH say 'metres' if metric set
Rotary encoder divide 2 option
Fix Bluetooth baudrate setting bug

******************************************
CHANGELOG: 27-Aug-2012  MPB
Use voice files 400-499
Fix voice output for timers and other things
Add voice file 58 - NO TELEMETRY
Fix Cvlt display
More rotary encoder functionality
BT debug display

******************************************
CHANGELOG: 22-Aug-2012  MPB
Action USB on boot, disable USB after 10 seconds power on

******************************************
CHANGELOG: 13-Aug-2012  MPB
Fix throttle warning when reversed bug

******************************************
CHANGELOG: 07-08-2012 MPB
Add retries to reading the SD card SCR register

******************************************
CHANGELOG: 03-08-2012 MPB
Add FAS100 Voltage
Correct FAS100 current and mAh
Voice uses files 101 to 109 for hundreds
Add total cell voltage
Add extra AND to custom switches
Ensure system sounds work when no SD card present

******************************************
CHANGELOG: 22-07-2012
Added changelog file
MENU used to play model name voice file
Timers in menu labelled 1 and 2
Voice Switch bug fixed
Compiler bug in core_cm3.c fixed


