@@ -1,6 +1,6 @@
 //Automatically generated file - do not edit
-#define DATE_STR "31.08.2012"
-#define TIME_STR "13:35:41"
-#define SUB_VERS 1115-Mike
-#define SVN_VERS "ersky9x-r107"
+#define DATE_STR "05.09.2012"
+#define TIME_STR "21:38:05"
+#define SUB_VERS 1121-Mike
+#define SVN_VERS "ersky9x-r109"
 #define MOD_VERS "REVB"
